--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="TxtNumber">Roll Your Dice</string>
+    <string name="rollBtn">roll</string>
 </resources>
